# fake_sd

./: .gitignore  CMakeLists.txt  README.rst
src/: CMakeLists.txt
src/pico/: CMakeLists.txt
